[gd_scene load_steps=3 format=3 uid="uid://4xpiaf77ha8b"]

[ext_resource type="Script" uid="uid://cwr6wd3phq0sr" path="res://scenes/ui/main_menu/main_menu.gd" id="1_1ch07"]
[ext_resource type="Texture2D" uid="uid://ulyjvatlkyg4" path="res://assets/graphics/background/Gemini_Generated_MenuBG.png" id="2_e8t4i"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1ch07")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_e8t4i")

[node name="Label" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(500, 100)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 29.0
offset_bottom = 183.0
grow_horizontal = 2
bbcode_enabled = true
text = "[font_size=50][outline_size=25][outline_color=black][color=gold]Small Kine Surf[/color][/outline_color][/outline_size][/font_size]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(300, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -151.5
offset_top = 15.0
offset_right = 148.5
offset_bottom = 151.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_focus_color = Color(1, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.40724552, 0.338652, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 0.40724552, 0.338652, 1)
theme_override_constants/outline_size = 16
theme_override_constants/h_separation = 12
theme_override_font_sizes/font_size = 32
text = "SURF!"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_focus_color = Color(1, 1, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 0, 1)
theme_override_colors/font_hover_color = Color(0.9895809, 1, 0.7345339, 1)
theme_override_colors/font_hover_pressed_color = Color(0.9895809, 1, 0.7345339, 1)
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 24
text = "Options
"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_focus_color = Color(0, 1, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 1, 0, 1)
theme_override_colors/font_hover_color = Color(0.63039315, 1, 0.6007017, 1)
theme_override_colors/font_hover_pressed_color = Color(0.63039315, 1, 0.6007017, 1)
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 24
text = "Credits"
